minor bug fixes, improvements

--- a/src/scrap-a.ipynb
+++ b/src/scrap-a.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "ae6afa97-9b17-4f24-8083-70ec3555cc25",
    "metadata": {},
    "outputs": [],
@@ -200,6 +200,257 @@
     "away_team, home_team = tuple([convert_teamname(scorebox.find_all('strong')[i].get_text().replace('\\n', '')) for i in (0,2)])\n",
     "away_score, home_score =  tuple([int(score.get_text().replace('\\n','')) for score in scorebox.find_all('div', class_='scores')])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a61267fe-3752-463e-97c1-a5ea11d7f0ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ADV_PASSING_COLUMNS = [\n",
+    "    'player', # changed to 'name'\n",
+    "    'team',\n",
+    "    'pass_cmp',\n",
+    "    'pass_att',\n",
+    "    'pass_yds',\n",
+    "    'pass_first_down',\n",
+    "    'pass_first_down_pct',\n",
+    "    'pass_target_yds',\n",
+    "    'pass_tgt_yds_per_att',\n",
+    "    'pass_air_yds',\n",
+    "    'pass_air_yds_per_cmp',\n",
+    "    'pass_air_yds_per_att',\n",
+    "    'pass_yac',\n",
+    "    'pass_yac_per_cmp',\n",
+    "    'pass_drops',\n",
+    "    'pass_drop_pct',\n",
+    "    'pass_poor_throws',\n",
+    "    'pass_poor_throw_pct',\n",
+    "    'pass_sacked',\n",
+    "    'pass_blitzed',\n",
+    "    'pass_hurried',\n",
+    "    'pass_hits',\n",
+    "    'pass_pressured',\n",
+    "    'pass_pressured_pct',\n",
+    "    'rush_scrambles',\n",
+    "    'rush_scrambles_yds_per_att'\n",
+    "]\n",
+    "\n",
+    "#rushing_advanced\n",
+    "ADV_RUSHING_COLUMNS = [\n",
+    "    'player',\n",
+    "    'team',\n",
+    "    'rush_att',\n",
+    "    'rush_yds',\n",
+    "    'rush_td',\n",
+    "    'rush_first_down',\n",
+    "    'rush_yds_before_contact',\n",
+    "    'rush_yds_bc_per_rush',\n",
+    "    'rush_yac',\n",
+    "    'rush_yac_per_rush',\n",
+    "    'rush_broken_tackles',\n",
+    "    'rush_broken_tackles_per_rush' # Incorrectly named on website, cant do much about it // Weird stat, ignore??\n",
+    "]\n",
+    "\n",
+    "#receiving_advanced\n",
+    "ADV_RECEIVING_COLUMNS = [\n",
+    "    'player',\n",
+    "    'team',\n",
+    "    'targets',\n",
+    "    'rec',\n",
+    "    'rec_yds',\n",
+    "    'rec_td',\n",
+    "    'rec_first_down',\n",
+    "    'rec_air_yds',\n",
+    "    'rec_air_yds_per_rec',\n",
+    "    'rec_yac',\n",
+    "    'rec_yac_per_rec',\n",
+    "    'rec_adot',\n",
+    "    'rec_broken_tackles',\n",
+    "    'rec_broken_tackles_per_rec',\n",
+    "    'rec_drops',\n",
+    "    'rec_drop_pct',\n",
+    "    'rec_target_int',\n",
+    "    'rec_pass_rating'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "25a8c4e6-77c8-4d65-850b-9ed6ccc412d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<table class=\"sortable stats_table now_sortable\" data-cols-to-freeze=\",1\" id=\"passing_advanced\">\n",
+       "<caption>Advanced Passing Table</caption>\n",
+       "<colgroup><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/><col/></colgroup>\n",
+       "<thead>\n",
+       "<tr>\n",
+       "<th aria-label=\"Player\" class=\"poptip sort_default_asc show_partial_when_sorting left\" data-stat=\"player\" scope=\"col\">Player</th>\n",
+       "<th aria-label=\"Tm\" class=\"poptip sort_default_asc show_partial_when_sorting left\" data-stat=\"team\" scope=\"col\">Tm</th>\n",
+       "<th aria-label=\"Passes Completed\" class=\"poptip center\" data-stat=\"pass_cmp\" data-tip=\"Passes completed\" scope=\"col\">Cmp</th>\n",
+       "<th aria-label=\"Pass Attempts\" class=\"poptip center\" data-stat=\"pass_att\" data-tip=\"Passes attempted\" scope=\"col\">Att</th>\n",
+       "<th aria-label=\"Passing Yds\" class=\"poptip center\" data-stat=\"pass_yds\" data-tip=\"Yards Gained by Passing&lt;br&gt;For teams, sack yardage is deducted from this total\" scope=\"col\">Yds</th>\n",
+       "<th aria-label=\"Pass 1st Downs\" class=\"poptip center\" data-stat=\"pass_first_down\" data-tip=\"First downs passing\" scope=\"col\">1D</th>\n",
+       "<th aria-label=\"1D%\" class=\"poptip center\" data-stat=\"pass_first_down_pct\" data-tip=\"First downs passing per pass play (pass attempts and sacks)\" scope=\"col\">1D%</th>\n",
+       "<th aria-label=\"IAY\" class=\"poptip center\" data-stat=\"pass_target_yds\" data-tip=\"Intended air yards - Air yards on all pass attempts, whether completed or incomplete\" scope=\"col\">IAY</th>\n",
+       "<th aria-label=\"IAY/PA\" class=\"poptip hide_non_quals center\" data-stat=\"pass_tgt_yds_per_att\" data-tip=\"Intended air yards per pass attempt - Average depth of target, whether completed or not\" scope=\"col\">IAY/PA</th>\n",
+       "<th aria-label=\"CAY\" class=\"poptip center\" data-stat=\"pass_air_yds\" data-tip=\"Completed air yards - Total yards completed passes traveled in the air past the line of scrimmage before being caught\" scope=\"col\">CAY</th>\n",
+       "<th aria-label=\"CAY/Cmp\" class=\"poptip hide_non_quals center\" data-stat=\"pass_air_yds_per_cmp\" data-tip=\"Completed air yards per completion - yards the ball traveled in the air past the line of scrimmage prior to a completion\" scope=\"col\">CAY/Cmp</th>\n",
+       "<th aria-label=\"CAY/PA\" class=\"poptip hide_non_quals center\" data-stat=\"pass_air_yds_per_att\" data-tip=\"Completed air yards per pass attempt - Air yards (on completed passes) per pass attempt\" scope=\"col\">CAY/PA</th>\n",
+       "<th aria-label=\"YAC\" class=\"poptip center\" data-stat=\"pass_yac\" data-tip=\"Pass yards after catch\" scope=\"col\">YAC</th>\n",
+       "<th aria-label=\"YAC/Cmp\" class=\"poptip hide_non_quals center\" data-stat=\"pass_yac_per_cmp\" data-tip=\"Pass yards after catch per completion\" scope=\"col\">YAC/Cmp</th>\n",
+       "<th aria-label=\"Drops\" class=\"poptip center\" data-stat=\"pass_drops\" data-tip=\"Passes dropped\" scope=\"col\">Drops</th>\n",
+       "<th aria-label=\"Drop%\" class=\"poptip hide_non_quals center\" data-stat=\"pass_drop_pct\" data-tip=\"Percentage of passes dropped per pass attempt, excluding spikes and throwaways\" scope=\"col\">Drop%</th>\n",
+       "<th aria-label=\"BadTh\" class=\"poptip center\" data-stat=\"pass_poor_throws\" data-tip=\"Poor throws\" scope=\"col\">BadTh</th>\n",
+       "<th aria-label=\"Bad%\" class=\"poptip hide_non_quals center\" data-stat=\"pass_poor_throw_pct\" data-tip=\"Percentage of poor throws per pass attempt, excluding spikes and throwaways\" scope=\"col\">Bad%</th>\n",
+       "<th aria-label=\"Sacked \" class=\"poptip center\" data-stat=\"pass_sacked\" data-tip=\"Times Sacked (official since 1969, complete NFL coverage since 1963, partial NFL coverage from 1960-62)\" scope=\"col\">Sk</th>\n",
+       "<th aria-label=\"Bltz\" class=\"poptip center\" data-stat=\"pass_blitzed\" data-tip=\"Times blitzed\" scope=\"col\">Bltz</th>\n",
+       "<th aria-label=\"Hrry\" class=\"poptip center\" data-stat=\"pass_hurried\" data-tip=\"Times hurried\" scope=\"col\">Hrry</th>\n",
+       "<th aria-label=\"Hits\" class=\"poptip center\" data-stat=\"pass_hits\" data-tip=\"Times hit as a QB while passing\" scope=\"col\">Hits</th>\n",
+       "<th aria-label=\"Prss\" class=\"poptip center\" data-stat=\"pass_pressured\" data-tip=\"Times the QB was pressured (hurries + hits+ times sacked)\" scope=\"col\">Prss</th>\n",
+       "<th aria-label=\"Prss%\" class=\"poptip hide_non_quals center\" data-stat=\"pass_pressured_pct\" data-tip=\"Times pressured per dropback\" scope=\"col\">Prss%</th>\n",
+       "<th aria-label=\"Scrm\" class=\"poptip center\" data-stat=\"rush_scrambles\" data-tip=\"Scrambles (rushes on plays designed as passes)\" scope=\"col\">Scrm</th>\n",
+       "<th aria-label=\"Yds/Scr\" class=\"poptip center\" data-stat=\"rush_scrambles_yds_per_att\" data-tip=\"Yards per scramble attempt\" scope=\"col\">Yds/Scr</th>\n",
+       "</tr>\n",
+       "</thead>\n",
+       "<tbody><tr data-row=\"0\"><th class=\"left\" data-append-csv=\"GoffJa00\" data-stat=\"player\" scope=\"row\"><a href=\"/players/G/GoffJa00.htm\">Jared Goff</a></th><td class=\"left\" data-stat=\"team\">DET</td><td class=\"right\" data-stat=\"pass_cmp\">22</td><td class=\"right\" data-stat=\"pass_att\">35</td><td class=\"right\" data-stat=\"pass_yds\">253</td><td class=\"right\" data-stat=\"pass_first_down\">11</td><td class=\"right\" data-stat=\"pass_first_down_pct\">30.6</td><td class=\"right\" data-stat=\"pass_target_yds\">238</td><td class=\"right\" data-stat=\"pass_tgt_yds_per_att\">6.8</td><td class=\"right\" data-stat=\"pass_air_yds\">144</td><td class=\"right\" data-stat=\"pass_air_yds_per_cmp\">6.5</td><td class=\"right\" data-stat=\"pass_air_yds_per_att\">4.1</td><td class=\"right\" data-stat=\"pass_yac\">109</td><td class=\"right\" data-stat=\"pass_yac_per_cmp\">5.0</td><td class=\"right\" data-stat=\"pass_drops\">3</td><td class=\"right\" data-stat=\"pass_drop_pct\">9.1%</td><td class=\"right\" data-stat=\"pass_poor_throws\">4</td><td class=\"right\" data-stat=\"pass_poor_throw_pct\">12.1%</td><td class=\"right\" data-stat=\"pass_sacked\">1</td><td class=\"right\" data-stat=\"pass_blitzed\">12</td><td class=\"right iz\" data-stat=\"pass_hurried\">0</td><td class=\"right\" data-stat=\"pass_hits\">3</td><td class=\"right\" data-stat=\"pass_pressured\">4</td><td class=\"right\" data-stat=\"pass_pressured_pct\">11.1%</td><td class=\"right iz\" data-stat=\"rush_scrambles\">0</td><td class=\"right iz\" data-stat=\"rush_scrambles_yds_per_att\"></td></tr>\n",
+       "<tr class=\"thead\" data-row=\"1\">\n",
+       "<th aria-label=\"Player\" class=\"sort_default_asc show_partial_when_sorting left\" data-stat=\"player\">Player</th>\n",
+       "<th aria-label=\"Tm\" class=\"sort_default_asc show_partial_when_sorting left\" data-stat=\"team\">Tm</th>\n",
+       "<th aria-label=\"Passes Completed\" class=\"center\" data-stat=\"pass_cmp\" data-tip=\"Passes completed\">Cmp</th>\n",
+       "<th aria-label=\"Pass Attempts\" class=\"center\" data-stat=\"pass_att\" data-tip=\"Passes attempted\">Att</th>\n",
+       "<th aria-label=\"Passing Yds\" class=\"center\" data-stat=\"pass_yds\" data-tip=\"Yards Gained by Passing&lt;br&gt;For teams, sack yardage is deducted from this total\">Yds</th>\n",
+       "<th aria-label=\"Pass 1st Downs\" class=\"center\" data-stat=\"pass_first_down\" data-tip=\"First downs passing\">1D</th>\n",
+       "<th aria-label=\"1D%\" class=\"center\" data-stat=\"pass_first_down_pct\" data-tip=\"First downs passing per pass play (pass attempts and sacks)\">1D%</th>\n",
+       "<th aria-label=\"IAY\" class=\"center\" data-stat=\"pass_target_yds\" data-tip=\"Intended air yards - Air yards on all pass attempts, whether completed or incomplete\">IAY</th>\n",
+       "<th aria-label=\"IAY/PA\" class=\"hide_non_quals center\" data-stat=\"pass_tgt_yds_per_att\" data-tip=\"Intended air yards per pass attempt - Average depth of target, whether completed or not\">IAY/PA</th>\n",
+       "<th aria-label=\"CAY\" class=\"center\" data-stat=\"pass_air_yds\" data-tip=\"Completed air yards - Total yards completed passes traveled in the air past the line of scrimmage before being caught\">CAY</th>\n",
+       "<th aria-label=\"CAY/Cmp\" class=\"hide_non_quals center\" data-stat=\"pass_air_yds_per_cmp\" data-tip=\"Completed air yards per completion - yards the ball traveled in the air past the line of scrimmage prior to a completion\">CAY/Cmp</th>\n",
+       "<th aria-label=\"CAY/PA\" class=\"hide_non_quals center\" data-stat=\"pass_air_yds_per_att\" data-tip=\"Completed air yards per pass attempt - Air yards (on completed passes) per pass attempt\">CAY/PA</th>\n",
+       "<th aria-label=\"YAC\" class=\"center\" data-stat=\"pass_yac\" data-tip=\"Pass yards after catch\">YAC</th>\n",
+       "<th aria-label=\"YAC/Cmp\" class=\"hide_non_quals center\" data-stat=\"pass_yac_per_cmp\" data-tip=\"Pass yards after catch per completion\">YAC/Cmp</th>\n",
+       "<th aria-label=\"Drops\" class=\"center\" data-stat=\"pass_drops\" data-tip=\"Passes dropped\">Drops</th>\n",
+       "<th aria-label=\"Drop%\" class=\"hide_non_quals center\" data-stat=\"pass_drop_pct\" data-tip=\"Percentage of passes dropped per pass attempt, excluding spikes and throwaways\">Drop%</th>\n",
+       "<th aria-label=\"BadTh\" class=\"center\" data-stat=\"pass_poor_throws\" data-tip=\"Poor throws\">BadTh</th>\n",
+       "<th aria-label=\"Bad%\" class=\"hide_non_quals center\" data-stat=\"pass_poor_throw_pct\" data-tip=\"Percentage of poor throws per pass attempt, excluding spikes and throwaways\">Bad%</th>\n",
+       "<th aria-label=\"Sacked \" class=\"center\" data-stat=\"pass_sacked\" data-tip=\"Times Sacked (official since 1969, complete NFL coverage since 1963, partial NFL coverage from 1960-62)\">Sk</th>\n",
+       "<th aria-label=\"Bltz\" class=\"center\" data-stat=\"pass_blitzed\" data-tip=\"Times blitzed\">Bltz</th>\n",
+       "<th aria-label=\"Hrry\" class=\"center\" data-stat=\"pass_hurried\" data-tip=\"Times hurried\">Hrry</th>\n",
+       "<th aria-label=\"Hits\" class=\"center\" data-stat=\"pass_hits\" data-tip=\"Times hit as a QB while passing\">Hits</th>\n",
+       "<th aria-label=\"Prss\" class=\"center\" data-stat=\"pass_pressured\" data-tip=\"Times the QB was pressured (hurries + hits+ times sacked)\">Prss</th>\n",
+       "<th aria-label=\"Prss%\" class=\"hide_non_quals center\" data-stat=\"pass_pressured_pct\" data-tip=\"Times pressured per dropback\">Prss%</th>\n",
+       "<th aria-label=\"Scrm\" class=\"center\" data-stat=\"rush_scrambles\" data-tip=\"Scrambles (rushes on plays designed as passes)\">Scrm</th>\n",
+       "<th aria-label=\"Yds/Scr\" class=\"center\" data-stat=\"rush_scrambles_yds_per_att\" data-tip=\"Yards per scramble attempt\">Yds/Scr</th>\n",
+       "</tr>\n",
+       "<tr data-row=\"2\"><th class=\"left\" data-append-csv=\"MahoPa00\" data-stat=\"player\" scope=\"row\"><a href=\"/players/M/MahoPa00.htm\">Patrick Mahomes</a></th><td class=\"left\" data-stat=\"team\">KAN</td><td class=\"right\" data-stat=\"pass_cmp\">21</td><td class=\"right\" data-stat=\"pass_att\">39</td><td class=\"right\" data-stat=\"pass_yds\">226</td><td class=\"right\" data-stat=\"pass_first_down\">10</td><td class=\"right\" data-stat=\"pass_first_down_pct\">25.6</td><td class=\"right\" data-stat=\"pass_target_yds\">354</td><td class=\"right\" data-stat=\"pass_tgt_yds_per_att\">9.1</td><td class=\"right\" data-stat=\"pass_air_yds\">113</td><td class=\"right\" data-stat=\"pass_air_yds_per_cmp\">5.4</td><td class=\"right\" data-stat=\"pass_air_yds_per_att\">2.9</td><td class=\"right\" data-stat=\"pass_yac\">113</td><td class=\"right\" data-stat=\"pass_yac_per_cmp\">5.4</td><td class=\"right\" data-stat=\"pass_drops\">5</td><td class=\"right\" data-stat=\"pass_drop_pct\">13.5%</td><td class=\"right\" data-stat=\"pass_poor_throws\">7</td><td class=\"right\" data-stat=\"pass_poor_throw_pct\">18.9%</td><td class=\"right iz\" data-stat=\"pass_sacked\">0</td><td class=\"right\" data-stat=\"pass_blitzed\">5</td><td class=\"right\" data-stat=\"pass_hurried\">1</td><td class=\"right\" data-stat=\"pass_hits\">7</td><td class=\"right\" data-stat=\"pass_pressured\">8</td><td class=\"right\" data-stat=\"pass_pressured_pct\">17.8%</td><td class=\"right\" data-stat=\"rush_scrambles\">6</td><td class=\"right\" data-stat=\"rush_scrambles_yds_per_att\">7.5</td></tr>\n",
+       "</tbody></table>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# adv_passing_table = \n",
+    "game_soup.find('table', id='passing_advanced')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "385c4712-c1f2-4fa6-a817-d644d3132654",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_adv_stat(stat: str, stat_val: str):\n",
+    "    if stat == 'team':\n",
+    "        return stat_val\n",
+    "\n",
+    "    if 'pct' in stat or '%' in stat_val: # Just in case\n",
+    "        return round( float(stat_val[:-1])/100, 3 )\n",
+    "\n",
+    "    if not len(stat_val):\n",
+    "        return 0.0\n",
+    "\n",
+    "    return float(stat_val) if '.' in stat_val else int(stat_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4f846ebe-ed85-405a-a035-12e262359d14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adv_passing_data = {\n",
+    "    **{'name': [clean_name(tag.get_text()) for tag in adv_passing_table.find_all('th', attrs={'data-stat': 'player'}) if tag.get_text() != 'Player']},\n",
+    "    # Define ^^ earlier then add aditional dict entry with positions\n",
+    "    **{\n",
+    "        stat: [parse_adv_stat(stat, td.get_text()) for td in adv_passing_table.find_all('td', attrs={'data-stat': stat})]\n",
+    "        for stat in ADV_PASSING_COLUMNS[1:]\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9e8e046f-0845-4dba-b311-84c54225e9c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': ['Jared Goff', 'Patrick Mahomes'],\n",
+       " 'team': ['DET', 'KAN'],\n",
+       " 'pass_cmp': [22, 21],\n",
+       " 'pass_att': [35, 39],\n",
+       " 'pass_yds': [253, 226],\n",
+       " 'pass_first_down': [11, 10],\n",
+       " 'pass_first_down_pct': [0.3, 0.25],\n",
+       " 'pass_target_yds': [238, 354],\n",
+       " 'pass_tgt_yds_per_att': [6.8, 9.1],\n",
+       " 'pass_air_yds': [144, 113],\n",
+       " 'pass_air_yds_per_cmp': [6.5, 5.4],\n",
+       " 'pass_air_yds_per_att': [4.1, 2.9],\n",
+       " 'pass_yac': [109, 113],\n",
+       " 'pass_yac_per_cmp': [5.0, 5.4],\n",
+       " 'pass_drops': [3, 5],\n",
+       " 'pass_drop_pct': [0.091, 0.135],\n",
+       " 'pass_poor_throws': [4, 7],\n",
+       " 'pass_poor_throw_pct': [0.121, 0.189],\n",
+       " 'pass_sacked': [1, 0],\n",
+       " 'pass_blitzed': [12, 5],\n",
+       " 'pass_hurried': [0, 1],\n",
+       " 'pass_hits': [3, 7],\n",
+       " 'pass_pressured': [4, 8],\n",
+       " 'pass_pressured_pct': [0.111, 0.178],\n",
+       " 'rush_scrambles': [0, 6],\n",
+       " 'rush_scrambles_yds_per_att': [0.0, 7.5]}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adv_passing_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1b04a0d-5741-446c-8d19-d08891c38040",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
